close to final draft

--- a/app/resources/theory-and-ethics.bib
+++ b/app/resources/theory-and-ethics.bib
@@ -1,4 +1,94 @@
-A@misc{parse2016have,
+@book{bronfenbrenner1979ecology,
+  title={The ecology of human development},
+  author={Bronfenbrenner, Urie},
+  year={1979},
+  publisher={Harvard university press}
+}
+
+@article{evans1984heuristic,
+  title={Heuristic and analytic processes in reasoning},
+  author={Evans, Jonathan St BT},
+  journal={British Journal of Psychology},
+  volume={75},
+  number={4},
+  pages={451--468},
+  year={1984},
+  publisher={Wiley Online Library}
+}
+
+@article{evans2013dual,
+  title={Dual-process theories of higher cognition: Advancing the debate},
+  author={Evans, Jonathan St BT and Stanovich, Keith E},
+  journal={Perspectives on psychological science},
+  volume={8},
+  number={3},
+  pages={223--241},
+  year={2013},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{hollen2013theory,
+  title={A theory-based decision aid for patients with cancer: results of feasibility and acceptability testing of DecisionKEYS for cancer},
+  author={Hollen, Patricia J and Gralla, Richard J and Jones, Randy A and Thomas, Christopher Y and Brenin, David R and Weiss, Geoffrey R and Schroen, Anneke T and Petroni, Gina R},
+  journal={Supportive care in cancer},
+  volume={21},
+  number={3},
+  pages={889--899},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{howlader2019seer,
+  title={SEER Cancer Statistics Review, 1975-2016 National Cancer Institute},
+  author={Howlader, N and NA, Krapcho M and Miller, D and Brest, A and Yu, M and Ruhl, J and Tatalovich, Z and Mariotto, A and Lewis, DR and Chen, HS and others},
+  journal={Bethesda, MD. National Cancer Institute. Bethesda, MD},
+  year={2019}
+}
+
+@book{james1890principles,
+  title={The principles of psychology},
+  author={James, William and Burkhardt, Frederick and Bowers, Fredson and Skrupskelis, Ignas K},
+  volume={1},
+  number={2},
+  year={1890},
+  publisher={Macmillan London}
+}
+
+@Inbook{Khani2018,
+author="Khani, Francesca
+and Robinson, Brian D.",
+editor="Robinson, Brian D.
+and Mosquera, Juan Miguel
+and Ro, Jae Y.
+and Divatia, Mukul",
+title="Racial Differences",
+bookTitle="Precision Molecular Pathology of Prostate Cancer",
+year="2018",
+publisher="Springer International Publishing",
+address="Cham",
+pages="79--98",
+isbn="978-3-319-64096-9",
+doi="10.1007/978-3-319-64096-9_6",
+url="https://doi.org/10.1007/978-3-319-64096-9_6"
+}
+
+@misc{kinlock2016racial,
+  title={Racial disparity in time between first diagnosis and initial treatment of prostate cancer},
+  author={Kinlock, Ballington L and Thorpe Jr, Roland J and Howard, Daniel L and Bowie, Janice V and Ross, Louie E and Fakunle, David O and LaVeist, Thomas A},
+  year={2016},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{mohler2019prostate,
+  title={Prostate cancer, version 2.2019},
+  author={Mohler, James L and Antonarakis, Emmanuel S and Armstrong, Andrew J and others},
+  journal={Journal of the National Comprehensive Cancer Network},
+  pages={19--30},
+  year={2019},
+  publisher={Harborside Press, LLC}
+}
+
+@misc{parse2016have,
   title={Where have all the nursing theories gone?},
   author={Parse, Rosemarie Rizzo},
   year={2016},
@@ -10,6 +100,39 @@ A@misc{parse2016have,
   author={Peterson, Sandra J and Bredow, Timothy S},
   year={2009},
   publisher={Lippincott Williams \& Wilkins}
+}
+
+@article{powell2013genes,
+  title={Genes associated with prostate cancer are differentially expressed in African American and European American men},
+  author={Powell, Isaac J and Dyson, Greg and Land, Susan and Ruterbusch, Julie and Bock, Cathryn H and Lenk, Steve and Herawi, Mehsati and Everson, Richard and Giroux, Craig N and Schwartz, Ann G and others},
+  journal={Cancer Epidemiology and Prevention Biomarkers},
+  volume={22},
+  number={5},
+  pages={891--897},
+  year={2013},
+  publisher={AACR}
+}
+
+@article{samuelson1938note,
+  title={A note on the pure theory of consumer's behaviour},
+  author={Samuelson, Paul A},
+  journal={Economica},
+  volume={5},
+  number={17},
+  pages={61--71},
+  year={1938},
+  publisher={JSTOR}
+}
+
+@article{siegel2019cancer,
+  title={Cancer statistics, 2019},
+  author={Siegel, Rebecca L and Miller, Kimberly D and Jemal, Ahmedin},
+  journal={CA: a cancer journal for clinicians},
+  volume={69},
+  number={1},
+  pages={7--34},
+  year={2019},
+  publisher={Wiley Online Library}
 }
 
 @article{wenzel2012cancer,
