added ricker function html

--- a/app/resources/theory-and-ethics.bib
+++ b/app/resources/theory-and-ethics.bib
@@ -27,6 +27,17 @@
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
 
+@article{penrod2005enhancing,
+  title={Enhancing methodological clarity: principle-based concept analysis},
+  author={Penrod, Janice and Hupcey, Judith E},
+  journal={Journal of advanced nursing},
+  volume={50},
+  number={4},
+  pages={403--409},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
 @article{hollen2013theory,
   title={A theory-based decision aid for patients with cancer: results of feasibility and acceptability testing of DecisionKEYS for cancer},
   author={Hollen, Patricia J and Gralla, Richard J and Jones, Randy A and Thomas, Christopher Y and Brenin, David R and Weiss, Geoffrey R and Schroen, Anneke T and Petroni, Gina R},
