preliminary draft, completed notes

--- a/app/resources/ProposalPresentation.bib
+++ b/app/resources/ProposalPresentation.bib
@@ -69,6 +69,28 @@
  publisher={Free press}
 }
 
+@article{janssen2016framework,
+ title={A framework for instrument development of a choice experiment: an application to type 2 diabetes},
+ author={Janssen, Ellen M and Segal, Jodi B and Bridges, John FP},
+ journal={The Patient-Patient-Centered Outcomes Research},
+ volume={9},
+ number={5},
+ pages={465--479},
+ year={2016},
+ publisher={Springer}
+}
+
+@article{janssen2017improving,
+  title={Improving the quality of discrete-choice experiments in health: how can we assess validity and reliability?},
+  author={Janssen, Ellen M and Marshall, Deborah A and Hauber, A Brett and Bridges, John FP},
+  journal={Expert review of pharmacoeconomics \& outcomes research},
+  volume={17},
+  number={6},
+  pages={531--542},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
 @article{karpozilos2004treatment,
  title={The treatment of cancer in Greek antiquity},
  author={Karpozilos, Apostolos and Pavlidis, Nicholas},
