--- a/app/resources/ProposalPresentation.bib
+++ b/app/resources/ProposalPresentation.bib
@@ -153,6 +153,15 @@
  publisher={S. Russell}
 }
 
+@Manual{r2018r,
+ title={R: A Language and Environment for Statistical Computing},
+ author={{R Core Team}},
+ organization={R Foundation for Statistical Computing},
+ address={Vienna, Austria},
+ year={2018},
+ url={https://www.R-project.org/},
+}
+
 @article{radwany2009end,
  title={End-of-life decision making and emotional burden: placing family meetings in context},
  author={Radwany, Steven and Albanese, Terry and Clough, Lynn and Sims, Linda and Mason, Hallie and Jahangiri, Sudy},
@@ -195,6 +204,14 @@
  pages={7--34},
  year={2019},
  publisher={Wiley Online Library}
+}
+
+@Manual{sousa2018qsort,
+ title = {qsort: Scoring Q-Sort Data},
+ author = {David N Sousa and João R Daniel},
+ year = {2018},
+ note = {R package version 0.2.3},
+ url = {https://CRAN.R-project.org/package=qsort},
 }
 
 @article{watts2005doing,
